# pikevm

./: Cargo.toml  LICENSE  README.md  shell.nix
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pcre.rs
nix/: sources.json
src/: dfa.rs  lib.rs  main.rs
src/dfa/: cfg.rs
tests/: pcre.rs  pcrecheck_tests  pcrecheck_tests.rs
